Move to Java 11 (#1501)